--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h1 class="section-heading">About Me</h1>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">As a passionate and motivated junior data analyst, <strong>my goal as a junior data analyst is to apply my analytical skills and tool proficiency to support a company in making informed, data-driven decision-making that enhances sales.</strong>
+
+I have spent the last 6 months honing my problem-solving skills using MECE and Agile methodologies. I have developed strong analytical abilities, including statistical hypothesis testing, exploratory data analysis (EDA), and funnel analysis. Proficiency in span tools such as MySQL, Google Big Query, Excel, Python, R, Tableau, and Power BI. I’m eager to contribute to boosting Sales and data-driven decision-making within a dynamic team.</p>
+                <a href="#" class="btn btn-default btn-xl">Portfolio</a>
             </div>
         </div>
     </div>
