--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -7,7 +7,7 @@
                 <p class="text-faded">As a passionate and motivated junior data analyst, <strong>my goal as a junior data analyst is to apply my analytical skills and tool proficiency to support a company in making informed, data-driven decision-making that enhances sales.</strong>
 
 I have spent the last 6 months honing my problem-solving skills using MECE and Agile methodologies. I have developed strong analytical abilities, including statistical hypothesis testing, exploratory data analysis (EDA), and funnel analysis. Proficiency in span tools such as MySQL, Google Big Query, Excel, Python, R, Tableau, and Power BI. I’m eager to contribute to boosting Sales and data-driven decision-making within a dynamic team.</p>
-                <a href="#" class="btn btn-default btn-xl">Portfolio</a>
+                <a href="_includes/portfolio.html" class="btn btn-default btn-xl">Portfolio</a>
             </div>
         </div>
     </div>
